--- a/Assignment-2.html
+++ b/Assignment-2.html
@@ -65,7 +65,35 @@
         height: 200px;
         margin: 20px;
         text-align: center;
-        
+      }
+      #section3{
+        background-color: #C87B78;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+      }
+      #art8{
+        background-color: #8E87B0;
+        width: 50%;
+        height: 300px;
+        margin: 20px;
+        text-align: center;
+      }
+      #box{
+        background-color: #84B4A8;
+        width: 50%;
+        height: 300px;
+        margin: 20px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+      }
+      #art9, #art10 {
+        background-color: #8E87B0;
+        width: 700px;
+        height: 120px;
+        margin: 20px;
+        text-align: center;
       }
   </style>
 
@@ -98,6 +126,13 @@
       <div id="art6"><h2 style="margin-top: 100px;">Article</h2></div>
       <div id="art7"><h2 style="margin-top: 100px;">Article</h2></div>
       <div></div>
+    </div>
+    <div id="section3">
+      <div id="art8"> <h2 style="margin-top: 150px;">Article</h2></div>
+      <div id="box">
+        <div id="art9"><h2 style="margin-top: 40px;">Article</h2></div>
+        <div id="art10"><h2 style="margin-top: 40px;">Article</h2></div>
+      </div>
     </div>
     <div id="section1">
       <div id="art1"><h2 style="margin-top: 150px;">Article</h2></div>
