--- a/Assignment-3(2).html
+++ b/Assignment-3(2).html
@@ -81,6 +81,9 @@
     .submit-btn:hover {
       background-color: #326bb8;
     }
+    label{
+        color: grey;
+    }
   </style>
 </head>
 <body>
@@ -102,7 +105,7 @@
       <div class="row">
         <div class="field">
           <label>Birthday</label>
-          <input type="date" name="birthday">
+          <input type="text" name="birthday">
         </div>
         <div class="field">
           <label>Gender</label>
