--- a/Assignment 4/Assignment-4.html
+++ b/Assignment 4/Assignment-4.html
@@ -1,203 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Space Exploration</title>
-  <style>
-    /* General reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #0a0f1c, #1c1e2a);
-      color: white;
-      min-height: 100vh;
-      overflow-x: hidden;
-      position: relative;
-    }
-
-    /* Navbar */
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 50px;
-    }
-
-    .navbar a{
-        position: relative;
-        color: #bbb;
-        text-decoration: none;
-        transition: color 0.3s ease;
-    }
-
-    .navbar a:hover {
-        color: white;
-    }
-
-    .navbar a::after{
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: -4px;              
-        width: 0%;
-        height: 2px;
-        background: #0ff;          
-        transition: width 0.3s ease;
-    }
-
-    .navbar a:hover::after {
-        width: 100%;
-    }
-
-
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-    .logo-box {
-      color: #0ff;
-      font-weight: bold;
-      padding: 8px;
-      border: white;
-      margin-right: 10px;
-    }
-    .menu {
-      display: flex;
-      gap: 30px;
-    }
-    .menu a {
-      color: #bbb;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-    .menu a:hover, .menu a.active {
-      color: #fff;
-    }
-    .explore-btn {
-      padding: 6px 12px;
-      background: #222;
-      border: 1px solid #444;
-      border-radius: 4px;
-      color: #bbb;
-      cursor: pointer;
-    }
-
-    /* Hero Section */
-    .hero {
-      text-align: center;
-      margin-top: 100px;
-    }
-    .hero h1 {
-      font-size: 60px;
-      font-weight: bold;
-      background: linear-gradient(90deg, #0ff, #00ff99);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .hero p {
-      margin-top: 15px;
-      font-size: 16px;
-      color: #aaa;
-    }
-    .hero button {
-      margin-top: 30px;
-      padding: 10px 20px;
-      background: transparent;
-      border: 1px solid #888;
-      color: white;
-      cursor: pointer;
-      border-radius: 3px;
-    }
-
-    /* Timeline */
-    .timeline {
-      margin: 100px auto;
-      width: 90%;
-      border-top: 2px solid rgba(255,255,255,0.2);
-      position: relative;
-      height: 200px;
-    }
-    .event {
-      position: absolute;
-      color: #0ff;
-      font-size: 12px;
-    }
-    .event p {
-      margin-top: 5px;
-    }
-    /* Example events placement */
-    .event1 { left: 5%; top: -50px; }
-    .event2 { left: 20%; top: 60px; color: #0ff; }
-    .event3 { left: 40%; top: -50px; color: #0ff; }
-    .event4 { left: 60%; top: 80px; color: #a0f; }
-    .event5 { left: 80%; top: -60px; color: #f0a; }
-
-    /* Timeline line (wave effect approximation) */
-    .wave {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 150px;
-      background: none;
-      border-bottom: 2px solid #888;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Navbar -->
-  <div class="navbar">
-    <div class="logo">
-      <div class="logo-box">SP</div>
-      <span>SpacePlatforms</span>
-    </div>
-    <div class="menu">
-      <a href="#" class="active">Home</a>
-      <a href="#">Missions</a>
-      <a href="#">Research</a>
-      <a href="#">Explorers</a>
-      <a href="#">Our philosophy</a>
-      <button class="explore-btn">Explore SP</button>
-    </div>
-  </div>
-
-  <!-- Hero Section -->
-  <div class="hero">
-    <h1>SPACE EXPLORATION</h1>
-    <p>Space exploration is the ongoing discovery and exploration<br>
-       of celestial structures in outer space</p>
-    <button>START EXPLORING</button>
-  </div>
-
-  <!-- Timeline -->
-  <div class="timeline">
-    <div class="wave"></div>
-    <div class="event event1">
-      <strong>JUNE 2016</strong>
-      <p>First attempts to launch<br>a Mars exploration mission</p>
-    </div>
-    <div class="event event2">
-      <strong>JULY 2020</strong>
-      <p>Landed on Mars, colony<br>in place</p>
-    </div>
-    <div class="event event3">
-      <strong>JANUARY 2060</strong>
-      <p>First signs of extraterrestrial<br>intelligence found</p>
-    </div>
-    <div class="event event4">
-      <strong>AUGUST 2200</strong>
-      <p>Aliens have conquered our<br>galaxy</p>
-    </div>
-    <div class="event event5">
-      <strong>FEBRUARY 2314</strong>
-      <p>Humans have decided to<br>fight back aliens</p>
-    </div>
-  </div>
-
-</body>
+<html>
+    <head>
+        <title>Assignment-4</title>
+        <link rel="stylesheet" href="Assignment-4.css">
+    </head>
+    <body>
+        <div class="navbar">
+            <div class="logo">
+                <div class="logo-box">SP</div>
+                <span>SpacePlatforms</span>
+        </div>
+        <div class="menu">
+            <a href="#" class="active">Home</a>
+            <a href="#">Missions</a>
+            <a href="#">Research</a>
+            <a href="#">Explorers</a>
+            <a href="#">Our philosophy</a>
+            <button class="explore-btn">Explore SP</button>
+            </div>
+        </div>
+        <div class="midbox">
+            <h1>SPACE EXPLORATION</h1>
+            <p>Space exploration is the ongoing discovery and exploration<br>
+               of celestial structures in outer space</p>
+            <a href="">START EXPLORING</a>
+        </div>
+        <div class="linegraph">
+            <img src="linegraph.png" alt="">
+        </div>
+        <div class="bottombox">
+            <p>Analytics</p>
+            <h1>YOU SHOULD TAKE A QUICK LOOK</h1>
+            <p>We want to show you how the process works.<br> Display for data:</p>
+            <button class="oct">October</button>
+        </div>
+        <div class="bargraph">
+            <img src="bargraph.png" alt="">
+        </div>
+        <div class="footbar">
+            <p style="left: 150px; font-size: 25px; top: -25px;">Get a quick info about us</p>
+            <button class="prf" style="position: relative; left:400px; top: -50px;">
+                <img src="download.png" alt="" style="position: relative; left: -60px; top: 33px;">
+                <h5>Company Profile</h5>
+                <p style="left: 10px;">Download pdf</p>
+            </button>
+            <button class="rpt" style="position: relative; left:600px; top: -50px;">
+                <img src="download.png" alt="" style="position: relative; left: -60px; top: 33px;">
+                <h5>Annual Report</h5>
+                <p style="left: 17px;">Download pdf</p>
+            </button>
+        </div>
+    </body>
 </html>
