--- a/Assignment 4/Assignment-4.html
+++ b/Assignment 4/Assignment-4.html
@@ -50,5 +50,17 @@
                 <p style="left: 17px;">Download pdf</p>
             </button>
         </div>
+        <div class="whitepage">
+            <h4>PRODUCT OVERVIEW</h4>
+            <div style="height:2px; background-color:purple; width:50px; position: relative; left: 715px; top: -45px;"></div>
+            <h1>This is something about<br>numbers</h1>
+            <p>Whale is a common name for various marine mammals<br>of the order Catacea.The term whale sometime refers to<br>all cataceans, but more often it excludes. </p>
+            <div class="loadingraph">
+                <img src="loading-graph.png" alt="" style="position: relative; left: -25px;top: 50px;">
+            </div>
+            <div class="circlegraph" style="display: flex; height: 800px; position: relative;left: -10px;">
+                <img src="circlegraph.png" alt="">
+            </div>
+        </div>
     </body>
 </html>
