last section left for assignment 4

--- a/Assignment 4/Assignment-4.html
+++ b/Assignment 4/Assignment-4.html
@@ -62,5 +62,41 @@
                 <img src="circlegraph.png" alt="">
             </div>
         </div>
+        <div class="whale-section">
+            <h5 class="press-title">PRESS RELEASES</h5>
+            <h1 class="whale-heading">Whales range in size from<br> the blue whale to red epic whale</h1>
+
+            <div class="whale-cards">
+                <div class="whale-card">
+                    <div class="date-box">
+                        <p class="day">04</p>
+                        <p class="month">FEB</p>
+                    </div>
+                    <h3>Whale is the common name for various marine mammals of the order Cetacea.</h3>
+                    <p>The term whale sometimes refers to all cetaceans, but more often it excludes dolphins and porpoises, which are smaller members of the suborder Odontoceti.</p>
+                    <button class="read-btn">Read more</button>
+                </div>
+
+                <div class="whale-card">
+                    <div class="date-box">
+                        <p class="day">23</p>
+                        <p class="month">JAN</p>
+                    </div>
+                    <h3>Whales range in size from the blue whale, the largest animal known to have ever existed</h3>
+                    <p>Whales are long-lived, humpback whales living for up to 77 years, while bowhead whales may live for more than a century.</p>
+                    <button class="read-btn">Read more</button>
+                </div>
+
+                <div class="whale-card">
+                    <div class="date-box">
+                        <p class="day">23</p>
+                        <p class="month">JAN</p>
+                    </div>
+                    <h3>Whales range in size from the blue whale, the largest animal known to have ever existed</h3>
+                    <p>Whales are long-lived, humpback whales living for up to 77 years, while bowhead whales may live for more than a century.</p>
+                    <button class="read-btn">Read more</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
