Assignment 4 almost complete

--- a/Assignment 4/Assignment-4.html
+++ b/Assignment 4/Assignment-4.html
@@ -62,41 +62,106 @@
                 <img src="circlegraph.png" alt="">
             </div>
         </div>
-        <div class="whale-section">
-            <h5 class="press-title">PRESS RELEASES</h5>
-            <h1 class="whale-heading">Whales range in size from<br> the blue whale to red epic whale</h1>
-
-            <div class="whale-cards">
-                <div class="whale-card">
-                    <div class="date-box">
-                        <p class="day">04</p>
-                        <p class="month">FEB</p>
+        <div class="whitepage">
+            <h2 style="margin-top: 100px;">PRESS RELEASE</h2>
+            <h1 style="text-align: left; left: 133px;">Whales range in size from<br> the blue whale to red<br>epic whale</h1>
+            <div class="articles">
+                <div class="articlebox">
+                    <div class="logo-heading">
+                        <div class="artlogo">
+                            <p>04 FEB</p>
+                        </div>
+                        <div class="Heading">
+                            <p>Whale is a common name for various 
+                            marine mammals of the order Catacea.</p>
+                            </p>
+                        </div>
                     </div>
-                    <h3>Whale is the common name for various marine mammals of the order Cetacea.</h3>
-                    <p>The term whale sometimes refers to all cetaceans, but more often it excludes dolphins and porpoises, which are smaller members of the suborder Odontoceti.</p>
-                    <button class="read-btn">Read more</button>
+                    <div class="content">
+                        <p>The term whale sometimes refers to all cataceans, but more ofren it excludes dolphins and porpoises, which are smaller members of the suborder Odontoceti</p>
+                    </div>
+                    <div class="readmore">
+                        <button class="readmore"> Read more</button>
+                    </div>
                 </div>
-
-                <div class="whale-card">
-                    <div class="date-box">
-                        <p class="day">23</p>
-                        <p class="month">JAN</p>
+                <div class="articlebox">
+                    <div class="logo-heading">
+                        <div class="artlogo">
+                            <p>23 JAN</p>
+                        </div>
+                        <div class="Heading">
+                            <p>Whales range in size from the <br> blue whale, the largest animal
+                            known to have ever existed</p>
+                            </p>
+                        </div>
                     </div>
-                    <h3>Whales range in size from the blue whale, the largest animal known to have ever existed</h3>
-                    <p>Whales are long-lived, humpback whales living for up to 77 years, while bowhead whales may live for more than a century.</p>
-                    <button class="read-btn">Read more</button>
+                    <div class="content">
+                        <p>The term whale sometimes refers to all cataceans, but more ofren it excludes dolphins and porpoises, which are smaller members of the suborder Odontoceti</p>
+                    </div>
+                    <div class="readmore">
+                        <button class="readmore"> Read more</button>
+                    </div>
                 </div>
-
-                <div class="whale-card">
-                    <div class="date-box">
-                        <p class="day">23</p>
-                        <p class="month">JAN</p>
+                <div class="articlebox">
+                    <div class="logo-heading">
+                        <div class="artlogo">
+                            <p>27 JUL</p>
+                        </div>
+                        <div class="Heading">
+                            <p>Whales range in size from the <br> blue whale, the largest animal
+                            known to have ever existed</p>
+                            </p>
+                        </div>
                     </div>
-                    <h3>Whales range in size from the blue whale, the largest animal known to have ever existed</h3>
-                    <p>Whales are long-lived, humpback whales living for up to 77 years, while bowhead whales may live for more than a century.</p>
-                    <button class="read-btn">Read more</button>
+                    <div class="content">
+                        <p>The term whale sometimes refers to all cataceans, but more ofren it excludes dolphins and porpoises, which are smaller members of the suborder Odontoceti</p>
+                    </div>
+                    <div class="readmore">
+                        <button class="readmore"> Read more</button>
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="graypage">
+            <div class="rownav">
+                <h3>HOME</h3>
+                <p>Timeline</p>
+                <p>Analytics</p>
+                <p>Product overview</p>
+                <p>Press Releases</p>
+            </div>
+            <div class="rownav">
+                <h3>MISSIONS</h3>
+                <p>Mars</p>
+                <p>Venus</p>
+                <p>Orion</p>
+                <p>Atlantis</p>
+            </div>
+            <div class="rownav">
+                <h3>RESEARCH</h3>
+                <p>Fussion drive</p>
+                <p>Quantum drive</p>
+                <p>Advanced Materials</p>
+                <p>Optics</p>
+                <p>Navigation Systems</p>
+            </div>
+            <div class="rownav">
+                <h3>EXPLORERS</h3>
+                <p>Search database</p>
+                <p>Current</p>
+                <p>Archive</p>
+            </div>
+            <div class="rownav">
+                <h3>OUR PHILOSOPHY</h3>
+                <p>Mission statements</p>
+                <p>Our values</p>
+                <p>Core beliefs</p>
+                <p>Our plans
+                </p>
+            </div>
+        </div>
+        <div class="footer">
+            <div class=""></div>
         </div>
     </body>
 </html>
