assignment no 4 completed

--- a/Assignment 4/Assignment-4.html
+++ b/Assignment 4/Assignment-4.html
@@ -161,7 +161,17 @@
             </div>
         </div>
         <div class="footer">
-            <div class=""></div>
+            <div class="botlogo">
+                <h2>SP</h2>                
+            </div>
+            <div class="bothead">
+                <p>SpacePlatforms is the leader of space exploration industry</p>
+            </div>
+            <div class="links">
+                <a href="">Space explorers code of honour</a>
+                <a href="">Terms and conditions</a>
+                <img src="arrow.png" alt="" height="50px" width="50px" style="position: relative;top: 10px;">
+            </div>
         </div>
     </body>
 </html>
