--- a/Game/duckhunt.html
+++ b/Game/duckhunt.html
@@ -9,20 +9,25 @@
 <body>
     <div id="game">
         <div id="title-box">
-            <h1 style="position: relative; right: 40px;bottom: -7px;">Duck</h1>
+            <h1 style="position: relative; right: 40px; bottom: -7px;">Duck</h1>
             <div style="height:2px; background-color: #00ccff; width:100%;"></div>
-            <h1 style="position: relative; left: 50px;bottom: -15px;">Hunt</h1>
+            <h1 style="position: relative; left: 50px; bottom: -15px;">Hunt</h1>
         </div>
+
         <div id="gameover">GAME OVER</div>
-        <div id="duck"></div>
-        <div id ="Reload">R=5</div>
+        
+        <!-- Ducks will be injected here by JS -->
+        <div id="ducks-container"></div>
+        <audio src="gunshot.mp3" id="audioplayer"></audio>
+        <div id="Reload">R=5</div>
         <div id="shot">
-            <div style="display: flex; flex-direction: row;margin-bottom: 10px;justify-content: space-evenly;">
+            <div style="display: flex; flex-direction: row; margin-bottom: 10px; justify-content: space-evenly;">
                 <div id="bullet1"><img src="bullet.png" alt="" width="15px"></div>
                 <div id="bullet2"><img src="bullet.png" alt="" width="15px"></div>
                 <div id="bullet3"><img src="bullet.png" alt="" width="15px"></div>
             </div>
-            SHOT</div>
+            SHOT
+        </div>
         <div id="score">000000<br>SCORE</div>
         <button id="startBtn">Start Game</button>    
     </div>
