finalized the final task

--- a/Game/duckhunt.html
+++ b/Game/duckhunt.html
@@ -13,10 +13,7 @@
             <div style="height:2px; background-color: #00ccff; width:100%;"></div>
             <h1 style="position: relative; left: 50px; bottom: -15px;">Hunt</h1>
         </div>
-
         <div id="gameover">GAME OVER</div>
-        
-        <!-- Ducks will be injected here by JS -->
         <div id="ducks-container"></div>
         <audio src="gunshot.mp3" id="audioplayer"></audio>
         <div id="Reload">R=5</div>
@@ -28,6 +25,9 @@
             </div>
             SHOT
         </div>
+        <div id="dog"><img src="zero.png" alt="" width="150px"></div>
+        <div id="dog2"><img src="clear.png" alt="" width="250px"></div>
+        <div id="dog3"><img src="perfect.png" alt="" width="200px"></div>
         <div id="score">000000<br>SCORE</div>
         <button id="startBtn">Start Game</button>    
     </div>
