--- a/Game/duckhunt.html
+++ b/Game/duckhunt.html
@@ -29,7 +29,8 @@
         <div id="dog2"><img src="clear.png" alt="" width="250px"></div>
         <div id="dog3"><img src="perfect.png" alt="" width="200px"></div>
         <div id="score">000000<br>SCORE</div>
-        <button id="startBtn">Start Game</button>    
+        <button id="startBtn">Start Game</button>
+        <button id="restartbtn">Restart Game</button>    
     </div>
     <script src="duckhunt.js"></script>
 </body>
