--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -38,6 +38,28 @@
   </div>
  </nav>
  <div class="container my-5">
+ <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar">
+  ☰ Menu
+ </button>
+ <div class="offcanvas offcanvas-start bg-dark text-white" tabindex="-1" id="sidebar">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title">My Sidebar</h5>
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
+  </div>
+  <div class="offcanvas-body">
+    <ul class="list-unstyled">
+      <li><a href="#" class="text-white text-decoration-none d-block py-2">Home</a></li>
+      <li><a href="#" class="text-white text-decoration-none d-block py-2">About</a></li>
+      <li><a href="#" class="text-white text-decoration-none d-block py-2">Projects</a></li>
+      <li><a href="#" class="text-white text-decoration-none d-block py-2">Contact</a></li>
+    </ul>
+  </div>
+</div>
+
+
+
+
+
   <h2 class="text-center mb-4">User Information</h2>
 
   <div class="table-responsive">
@@ -77,6 +99,17 @@
   <h2 class="text-center mb-4">User Statistics</h2>
   <canvas id="myBarChart" height="100"></canvas>
  </div>
+ <!-- Footer -->
+<footer class="bg-dark text-light py-4 mt-5">
+  <div class="container text-center">
+    <p class="mb-1">&copy; 2025 MyPortfolio. All Rights Reserved.</p>
+    <div>
+      <a href="#" class="text-light me-3">Privacy Policy</a>
+      <a href="#" class="text-light">Terms of Service</a>
+    </div>
+  </div>
+</footer>
+
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
